# NeuroLang

./: .neurobuild  CMakeLists.txt  README.md  build.bat  build.js  build.sh  package-lock.json  package.json
Include/Neuro/Lang/: AST.hpp  ASTRelation.hpp  Interpreter.hpp  OpCodes.hpp  Variable.hpp
Include/Neuro/Runtime/: Allocator.hpp  Assert.hpp  DLLDecl.h  Delegate.hpp  Error.hpp  ExceptionBase.hpp  GarbageCollector.h  GarbageCollector.hpp  HashCode.hpp  Maybe.hpp  MaybeAnError.hpp  Misc.hpp  NeuroBuffer.hpp  NeuroIdentifier.hpp  NeuroMap.hpp  NeuroObject.hpp  NeuroObjectWrapper.hpp  NeuroSet.hpp  NeuroString.hpp  NeuroTypes.h  NeuroValue.hpp  Numeric.hpp  Pair.hpp  Runtime.h  Runtime.hpp  StringBuilder.hpp
Include/Neuro/Runtime/Concurrency/: ReverseSemaphore.hpp  ScopeLocks.hpp
Include/Neuro/Runtime/GC/: ManagedMemoryDescriptor.hpp  ManagedMemoryOverhead.hpp  ManagedMemoryPointer.hpp  ManagedMemoryTable.hpp  NeuroGC.h  NeuroGC.hpp  Queue.hpp
Include/Neuro/Runtime/Platform/: Broker.hpp  PlatformApple.hpp  PlatformGeneric.hpp  PlatformLinux.hpp  PlatformUnix.hpp  PlatformWindows.hpp
Source/Lang/: AST.cpp  ASTRelation.cpp  Interpreter.cpp
Source/Runtime/: Error.cpp  NeuroObject.cpp  NeuroValue.cpp  Runtime.cpp
Source/Runtime/Concurrency/: ReverseSemaphore.cpp
Source/Runtime/GC/: ManagedMemoryDescriptor.cpp  ManagedMemoryPointer.cpp  ManagedMemoryTable.cpp  NeuroGC.cpp  NeuroIdentifier.cpp  NeuroObject.cpp
Source/Runtime/Platform/: PlatformApple.cpp  PlatformGeneric.cpp  PlatformLinux.cpp  PlatformUnix.cpp  PlatformWindows.cpp
Test/: CLInterface.hpp  NeuroTestingFramework.cpp  NeuroTestingFramework.hpp  Platform.hpp  PlatformConstants.cpp  PlatformConstants.hpp  PlatformGeneric.hpp  PlatformLinux.cpp  PlatformLinux.hpp  PlatformWindows.cpp  PlatformWindows.hpp  UnitTests.hpp  context.js  main.cpp  test.conf.json  test.js  util.error.js  util.string.js
Test/NeuroRT/: TestBuffer.cpp  TestDelegate.cpp  TestGC.cpp  TestManagedMemoryOverhead.cpp  TestManagedMemoryTable.cpp  TestMap.cpp  TestMaybe.cpp  TestNeuroObject.cpp  TestReverseSemaphore.cpp  TestSet.cpp  TestString.cpp
